Added Image Resources.
Image resources now added.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ MobileAppUI/.vs/MobileAppUI/v15/Server/sqlite3/storage.ide
 MobileAppUI/.vs/MobileAppUI/v15/Server/sqlite3/storage.ide-wal
 MobileAppUI/.vs/MobileAppUI/v15/Server/sqlite3/storage.ide-shm
 MobileAppUI/MobileAppUI/MobileAppUI.Android/obj/
+MobileAppUI/MobileAppUI/MobileAppUI.Android/bin/
 MobileAppUI/MobileAppUI/MobileAppUI.iOS/obj/
+MobileAppUI/MobileAppUI/MobileAppUI.iOS/bin/
 MobileAppUI/MobileAppUI/MobileAppUI.UWP/obj/
+MobileAppUI/MobileAppUI/MobileAppUI.UWP/bin/
 MobileAppUI/MobileAppUI/MobileAppUI/obj/
+MobileAppUI/MobileAppUI/MobileAppUI/bin/
