List View Salons

--- a/MobileAppUI/MobileAppUI/MobileAppUI/MobileAppUI.csproj
+++ b/MobileAppUI/MobileAppUI/MobileAppUI/MobileAppUI.csproj
@@ -9,6 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="SalonsList.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="TOU.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
