--- a/MobileAppUI/MobileAppUI/MobileAppUI.UWP/MobileAppUI.UWP.csproj
+++ b/MobileAppUI/MobileAppUI/MobileAppUI.UWP/MobileAppUI.UWP.csproj
@@ -155,6 +155,9 @@
   <ItemGroup>
     <Content Include="Assets\Avenir-Medium.ttf" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\AEH.ttf" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
