--- a/MobileAppUI/MobileAppUI/MobileAppUI.Android/MobileAppUI.Android.csproj
+++ b/MobileAppUI/MobileAppUI/MobileAppUI.Android/MobileAppUI.Android.csproj
@@ -62,6 +62,7 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\Avenir-Medium.ttf" />
+    <AndroidAsset Include="Assets\AEH.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
     <None Include="Properties\AndroidManifest.xml" />
