--- a/MobileAppUI/MobileAppUI/MobileAppUI.iOS/MobileAppUI.iOS.csproj
+++ b/MobileAppUI/MobileAppUI/MobileAppUI.iOS/MobileAppUI.iOS.csproj
@@ -95,6 +95,7 @@
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <BundleResource Include="Resources\Avenir-Medium.ttf" />
+    <BundleResource Include="Resources\AEH.ttf" />
   </ItemGroup>
   <ItemGroup>
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon1024.png">
