Filled Questionare Added
Added filled questionare data.

--- a/MobileAppUI/MobileAppUI/MobileAppUI/MobileAppUI.csproj
+++ b/MobileAppUI/MobileAppUI/MobileAppUI/MobileAppUI.csproj
@@ -9,6 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="FilledQuestionare.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="SalonDetail.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
