--- a/MobileAppUI/MobileAppUI/MobileAppUI.Android/MobileAppUI.Android.csproj
+++ b/MobileAppUI/MobileAppUI/MobileAppUI.Android/MobileAppUI.Android.csproj
@@ -169,5 +169,11 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\x.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\filter1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\menu_3.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
